force-app/main/default/objects/Opportunity/fields/Authorised_Signatory_People__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Signatory_People__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised Signatory People</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>