force-app/main/default/objects/Opportunity/fields/Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BVCDeals</relationshipLabel>
    <relationshipName>BVCDeals</relationshipName>
    <type>Lookup</type>
</CustomField>