force-app/main/default/objects/Opportunity/fields/Auto_Generated_Deal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Generated Deal</label>
    <type>Checkbox</type>
</CustomField>