force-app/main/default/objects/Opportunity/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>Account.Brand_Name__c</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>