force-app/main/default/objects/Opportunity/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACR</fullName>
            </value>
            <value>
                <fullName>Non ACR</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <isActive>false</isActive>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Shipment</fullName>
                <isActive>false</isActive>
                <label>Shipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>