force-app/main/default/objects/Opportunity/fields/BVC_Annual_Shipments__c.field-meta.xml
<CustomField>
    <fullName>BVC_Annual_Shipments__c</fullName>
    <description>Number of annual shipments for the opportunity</description>
    <label>No of Shipments Annually</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>