force-app/main/default/objects/Opportunity/fields/BVC_Competitors__c.field-meta.xml
<CustomField>
    <fullName>BVC_Competitors__c</fullName>
    <description>Enter the competitors for BVC for the specific Opportunity</description>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sequel Logistics</fullName>
            </value>
            <value>
                <fullName>Ambe Express</fullName>
            </value>
            <value>
                <fullName>Secure Global Logistics</fullName>
            </value>
            <value>
                <fullName>Brinks India</fullName>
            </value>
            <value>
                <fullName>Malca-Amit</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
            <value>
                <fullName>Gati</fullName>
            </value>
            <value>
                <fullName>Safexpress</fullName>
            </value>
            <value>
                <fullName>Blue Dart</fullName>
            </value>
            <value>
                <fullName>Delhivery</fullName>
            </value>
            <value>
                <fullName>Naplog</fullName>
            </value>
            <value>
                <fullName>Ashok Logistics</fullName>
            </value>
            <value>
                <fullName>Air Parcel</fullName>
            </value>
            <value>
                <fullName>JK Customs</fullName>
            </value>
            <value>
                <fullName>BK Freight</fullName>
            </value>
            <value>
                <fullName>Self-transport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>