force-app/main/default/objects/Opportunity/fields/BVC_L2_Product__c.field-meta.xml
<CustomField>
    <fullName>BVC_L2_Product__c</fullName>
    <label>BVC Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValSHIP</fullName>
            </value>
            <value>
                <fullName>iValSHIP</fullName>
            </value>
            <value>
                <fullName>eSHIP</fullName>
            </value>
            <value>
                <fullName>ieSHIP</fullName>
            </value>
            <value>
                <fullName>ExhibiSHIP</fullName>
            </value>
            <value>
                <fullName>ArtSHIP</fullName>
            </value>
            <value>
                <fullName>LuxeSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>