force-app/main/default/objects/Opportunity/fields/BVC_Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>BVC_Next_Contact_Date__c</fullName>
    <label>Next Contact Date</label>
    <type>DateTime</type>
</CustomField>