force-app/main/default/objects/Opportunity/fields/BVC_Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>BVC_Opportunity_Age__c</fullName>
    <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>