force-app/main/default/objects/Opportunity/fields/BVC_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>BVC_Opportunity_Number__c</fullName>
    <displayFormat>0-{0000000000}</displayFormat>
    <label>Deal Number</label>
    <type>AutoNumber</type>
</CustomField>