force-app/main/default/objects/Opportunity/fields/BVC_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>BVC_Opportunity_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Contracted customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>