force-app/main/default/objects/Opportunity/fields/BVC_Product__c.field-meta.xml
<CustomField>
    <fullName>BVC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field with Product</description>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>CB, ArtSHIP, ValSHIP, eSHIP, ieSHIP, iValSHIP, ExhibiSHIP, BATH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>