force-app/main/default/objects/Opportunity/fields/BVC_Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>BVC_Reason_for_Loss__c</fullName>
    <description>Enter the reason for the Opportunity Lost</description>
    <label>Reason for Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>