force-app/main/default/objects/Opportunity/fields/BVC_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>BVC_Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Potential</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Pickup Time</fullName>
            </value>
            <value>
                <fullName>Delivery Time</fullName>
            </value>
            <value>
                <fullName>Transit Duration</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Payment Term</fullName>
            </value>
            <value>
                <fullName>Documentation Requirement</fullName>
            </value>
            <value>
                <fullName>Satisfied with competition</fullName>
            </value>
            <value>
                <fullName>Consignee Preference</fullName>
            </value>
            <value>
                <fullName>Global Contract</fullName>
            </value>
            <value>
                <fullName>Unauthentic Business</fullName>
            </value>
            <value>
                <fullName>Other Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>