force-app/main/default/objects/Opportunity/fields/BVC_StageLastChanged__c.field-meta.xml
<CustomField>
    <fullName>BVC_StageLastChanged__c</fullName>
    <label>Stage Last Changed</label>
    <type>DateTime</type>
</CustomField>