force-app/main/default/objects/Opportunity/fields/BVC_TimeOverSinceStageChanged__c.field-meta.xml
<CustomField>
    <fullName>BVC_TimeOverSinceStageChanged__c</fullName>
    <formula>(NOW() - BVC_StageLastChanged__c)*24*60</formula>
    <label>TimeOverSinceStageChanged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>