force-app/main/default/objects/Opportunity/fields/Contact_Person_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone_Number__c</fullName>
    <label>Contact Person Phone Number</label>
    <type>Phone</type>
</CustomField>