force-app/main/default/objects/Opportunity/fields/Dummy_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Customer</label>
    <type>Checkbox</type>
</CustomField>