force-app/main/default/objects/Opportunity/fields/Exhibition_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Type__c</fullName>
    <label>Exhibition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>InterNational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>