force-app/main/default/objects/Opportunity/fields/ieSHIP_Location__c.field-meta.xml
<CustomField>
    <fullName>ieSHIP_Location__c</fullName>
    <label>ieSHIP Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Pan India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>