force-app/main/default/objects/Opportunity/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals (Influencer)</relationshipLabel>
    <relationshipName>Deals1</relationshipName>
    <type>Lookup</type>
</CustomField>