force-app/main/default/objects/Opportunity/fields/Is_Deal_with_New_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_with_New_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Deal with New Price</label>
    <type>Checkbox</type>
</CustomField>