force-app/main/default/objects/Opportunity/fields/iSHIP_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>iSHIP_Sub_Category__c</fullName>
    <label>ieSHIP Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecom</fullName>
            </value>
            <value>
                <fullName>Upto 50K$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>