force-app/main/default/objects/Opportunity/fields/Last_Activity_Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Captured_Date__c</fullName>
    <description>This field is used to trigger email to Deal Owner if any Deal hasn’t been contacted (No Activity) in past 14 days. This field will be write by trigger on  task/event.</description>
    <label>Last Activity Captured Date</label>
    <type>Date</type>
</CustomField>