force-app/main/default/objects/Opportunity/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>