force-app/main/default/objects/Opportunity/fields/Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>Package_Amount__c</fullName>
    <label>Package Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>250000</fullName>
            </value>
            <value>
                <fullName>120000</fullName>
            </value>
            <value>
                <fullName>500000</fullName>
            </value>
            <value>
                <fullName>1000000</fullName>
            </value>
            <value>
                <fullName>2500000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>