force-app/main/default/objects/Opportunity/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <formula>Owner.FirstName +&apos; &apos;+Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner</label>
    <type>Text</type>
</CustomField>