force-app/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>IValship Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>