force-app/main/default/objects/Opportunity/fields/Revenue_Lost__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Lost__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &apos;Deal Lost&apos;),Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>