force-app/main/default/objects/Opportunity/fields/Revenue_Won__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Won__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &apos;Won - Shipments Started&apos;), Amount ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>