force-app/main/default/objects/Opportunity/fields/rsdoc__RS_Document_to_Merge__c.field-meta.xml
<CustomField>
    <fullName>rsdoc__RS_Document_to_Merge__c</fullName>
    <description>Enter Document Action ID to generate document.</description>
    <inlineHelpText>Enter Document Action ID to generate document.</inlineHelpText>
    <label>Document to Merge (DEPRECATED)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>