force-app/main/default/objects/Opportunity/fields/Second_Level_Product__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Product__c</fullName>
    <label>Second Level Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>