force-app/main/default/objects/Opportunity/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <formula>Account.Sales_Secondary_Owner__r.FirstName+&apos; &apos;+Account.Sales_Secondary_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Owner</label>
    <type>Text</type>
</CustomField>