force-app/main/default/objects/Opportunity/fields/Tariff_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Plan__c</fullName>
    <label>Tariff Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>