force-app/main/default/objects/Opportunity/fields/Update_Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Update_Deal_Stage__c</fullName>
    <formula>(DATEVALUE( BVC_Next_Contact_Date__c )=TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Deal Stage</label>
    <type>Checkbox</type>
</CustomField>