force-app/main/default/objects/Opportunity/recordTypes/BVC_BATH_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_BATH_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC BATH Deal</label>
</RecordType>