force-app/main/default/objects/Opportunity/recordTypes/BVC_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <description>Record Type for BVC Brinks, BVC Clearance, BV Chinai and BVC Global</description>
    <label>BVC ValSHIP Deal</label>
</RecordType>