force-app/main/default/objects/Opportunity/recordTypes/BVC_eSHIP_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_eSHIP_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC eSHIP Deal</label>
</RecordType>