force-app/main/default/objects/Opportunity/recordTypes/BVC_ExhibiSHIP_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_ExhibiSHIP_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC ExhibiSHIP Deal</label>
</RecordType>