force-app/main/default/objects/Opportunity/recordTypes/BVC_ieSHIP_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_ieSHIP_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC ieSHIP Deal</label>
</RecordType>