force-app/main/default/objects/Opportunity/recordTypes/BVC_iValSHIP_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_iValSHIP_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC iValSHIP Deal</label>
</RecordType>