force-app/main/default/objects/Opportunity/recordTypes/BVC_MarketSHIP_Deal.recordType-meta.xml
<RecordType>
    <fullName>BVC_MarketSHIP_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>BVC MarketSHIP Deal</label>
</RecordType>