force-app/main/default/objects/Opportunity/recordTypes/Dummy_Customer_Deal.recordType-meta.xml
<RecordType>
    <fullName>Dummy_Customer_Deal</fullName>
    <active>true</active>
    <businessProcess>Deal Sales Process</businessProcess>
    <label>Dummy Customer Deal</label>
</RecordType>