force-app/main/default/objects/Opportunity/validationRules/Next_Contact_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Contact_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(StageName) &amp;&amp;
 ISPICKVAL(StageName, &apos;Contact Later&apos;) &amp;&amp; 
ISBLANK( BVC_Next_Contact_Date__c )) ||
(ISNEW() &amp;&amp; 
 ISPICKVAL(StageName, &apos;Contact Later&apos;) &amp;&amp; 
 ISBLANK( BVC_Next_Contact_Date__c ))</errorConditionFormula>
    <errorDisplayField>BVC_Next_Contact_Date__c</errorDisplayField>
    <errorMessage>Next Contact Date Cannot be empty.</errorMessage>
</ValidationRule>